bug-044466 - buyer> search results> price filter> text and symbol are overlapping with each other

--- a/application/views/css/main-rtl.css
+++ b/application/views/css/main-rtl.css
@@ -30390,7 +30390,7 @@ a.ui-button:active,
 .noUi-target {
   background: #FAFAFA;
   border-radius: 2px;
-  border: 1px solid #D3D3D3;
+  border: none;
   box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB; }
 
 .noUi-connects {
